<resources>
    <string name="app_name">AppPhysicare</string>
    <string name="valtetitulo">PHYSICARE</string>
    <string name="valetusuario">USUARIO :</string>
    <string name="valedtusuario">INGRESE SU USUARIO</string>
    <string name="valetcontrasena">CONTRASEÑA :</string>
    <string name="valedtcontrasena">INGRESE SU CONTRASEÑA</string>
    <string name="valetiniciarsesion">INICIAR SESION</string>
    <string name="valetregistrarse">REGISTRARSE</string>
    <string name="valetvercitas">VER CITAS</string>
    <string name="valbtncancelarcita">CANCELAR</string>
    <string name="valetlistausuariotitulo">LISTA USUARIOS</string>
    <string name="valbtneliminar">ELIMINAR</string>
    <string name="valcitaagenda">CITAS AGENDADAS</string>
    <string name="valbtnactualizarcita">ACTUALIZAR CITA</string>
    <string name="valbtneliminarcita">ELIMINAR CITA</string>
    <string name="valetactualizarcitatitulo">ACTUALIZAR CITA</string>
    <string name="valettipoterapia">TIPO DE TERAPIA</string>
    <string name="valfecha">FECHA</string>
    <string name="valhora">HORA</string>
    <string name="btnguardaR">GUARDAR</string>
    <string name="valnombre" />
    <string name="valagenda">Agendar Cita</string>
    <string name="valvercitas">Ver Citas</string>
    <string name="valconocenos">Conócenos</string>
    <string name="valsalir">Salir</string>
    <string name="vallistageneral">Lista General</string>
    <string name="vallistauser">Lista Usuarios</string>
    <string name="valetnombre">Ingrese su Nombre</string>
    <string name="valetapellidos">Ingrese su Apellido</string>
    <string name="valetnomusuario">Ingrese su Usuario</string>
    <string name="valettelefono">Ingrese su Telefono</string>
    <string name="valetcorreo">Ingrese su Correo</string>
    <string name="valetpassword">Ingrese su Contraseña</string>
    <string name="valagendarcita">AGENDAR CITA</string>
    <string name="valterapia">Tipo de Terapia</string>
    <string name="valfechaterapia">Fecha</string>
    <string name="valhoraterapia">Hora</string>
    <string name="btnagendar">AGENDAR CITA</string>
    <string name="valbtnregistrarse">REGISTRAR</string>
    <string name="valregistrarse">REGISTRARSE</string>
    <string name="title_activity_boton_conocenos">BotonConocenos</string>
    <string name="valconocenoss">conocenos</string>
    <string name="valvisitanos">Vísitanos</string>
    <string name="valdireccion">Calle Alejandro Deustua 290 Distrito San Juan de Miraflores</string>
    <string name="valmovil">Movil:998 745 256 974 125 478</string>
    <string name="valweb" />
    <string name="valweeb">WEB: www.TerapiasJossie.com</string>
</resources>