<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarUsuarioActivity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="50dp"
        android:text="@string/valregistrarse"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="101dp"
        android:layout_height="98dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@mipmap/usuarios" />

    <EditText
        android:id="@+id/EDTNOMBRE2"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/style_edt"
        android:ems="10"
        android:hint="@string/valetnombre"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/EDTAPELLIDO2"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/style_edt"
        android:ems="10"
        android:hint="@string/valetapellidos"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toBottomOf="@+id/EDTNOMBRE2"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/EDTUSUARIO2"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/style_edt"
        android:ems="10"
        android:hint="@string/valetnomusuario"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toBottomOf="@+id/EDTAPELLIDO2"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/EDTTELEFONO2"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/style_edt"
        android:ems="10"
        android:hint="@string/valettelefono"
        android:inputType="phone"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toBottomOf="@+id/EDTUSUARIO2"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/EDTCORREO2"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/style_edt"
        android:ems="10"
        android:hint="@string/valetcorreo"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toBottomOf="@+id/EDTTELEFONO2"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/EDTCONTRASENA2"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/style_edt"
        android:ems="10"
        android:hint="@string/valetpassword"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toBottomOf="@+id/EDTCORREO2"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/BTNREGISTRARSE2"
        android:layout_width="133dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/btn_bg"
        android:text="@string/valregistrarse"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toBottomOf="@+id/EDTCONTRASENA2" />
</androidx.constraintlayout.widget.ConstraintLayout>