<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgendarCitaActivity">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="60dp"
        android:text="@string/valagendarcita"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="93dp"
        android:layout_height="118dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:srcCompat="@mipmap/agenda" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="casual"
        android:text="@string/valterapia"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Spinner
        android:id="@+id/SPNTIPOTERAPIA"
        android:layout_width="301dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:text="@string/valfechaterapia"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toBottomOf="@+id/SPNTIPOTERAPIA" />

    <Spinner
        android:id="@+id/SPNFECHATERAPIA"
        android:layout_width="301dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:text="@string/valhoraterapia"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toBottomOf="@+id/SPNFECHATERAPIA" />

    <Spinner
        android:id="@+id/SPNHORATERAPIA"
        android:layout_width="301dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/BTNAGENDAR"
        android:layout_width="133dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_bg"
        android:text="@string/btnagendar"
        android:textAlignment="center"
        android:textColor="#F6F5F5"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toBottomOf="@+id/SPNHORATERAPIA"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>